--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         }
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "ext-curl": "*",
+        "ext-json": "*"
     }
 }
