--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,17 @@
             "Abb\\Fakturownia\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Abb\\Fakturownia\\Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
         "ext-json": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
     }
 }
