--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         }
     },
     "require": {
-        "php": ">=5.4.0",
+        "php": "^7.1",
         "ext-curl": "*",
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^7"
     }
 }
