--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 vendor
 .idea
-/composer.lock
+composer.lock
+composer.phar
+phpunit.xml
 .phpunit.result.cache
+.php-cs-fixer.php
+.php-cs-fixer.cache
