--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
         }
     },
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.0.2",
         "ext-curl": "*",
         "ext-json": "*",
-        "symfony/http-client": "^7.0",
-        "symfony/http-client-contracts": "^3.4.1"
+        "symfony/http-client": "^6.0 || ^7.0",
+        "symfony/http-client-contracts": "^3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
