--- a/composer.json
+++ b/composer.json
@@ -24,16 +24,21 @@
         "php": ">=8.0.2",
         "ext-curl": "*",
         "ext-json": "*",
+        "nyholm/psr7": "^1.8",
+        "psr/http-client": "^1.0",
         "symfony/http-client": "^6.0 || ^7.0",
-        "symfony/http-client-contracts": "^3"
+        "symfony/http-client-contracts": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6",
-        "friendsofphp/php-cs-fixer": "^3.50"
+        "friendsofphp/php-cs-fixer": "^3.65",
+        "phpunit/phpunit": "^9.6"
     },
     "scripts": {
         "tests": "vendor/bin/phpunit tests",
         "php-cs": "vendor/bin/php-cs-fixer fix --diff --dry-run --no-interaction -v",
         "php-cs-fix": "vendor/bin/php-cs-fixer fix"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
