--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
         }
     },
     "require": {
-        "php": ">=8.0.2",
+        "php": ">=7.4",
         "ext-curl": "*",
         "ext-json": "*",
         "nyholm/psr7": "^1.8",
         "psr/http-client": "^1.0",
-        "symfony/http-client": "^6.0 || ^7.0",
-        "symfony/http-client-contracts": "^3.0"
+        "symfony/http-client": "^5.4 || ^6.0 || ^7.0",
+        "symfony/http-client-contracts": "^2.5 || ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.65",
